[gd_scene format=3 uid="uid://d6ec03aaau4f"]

[ext_resource type="Script" uid="uid://lalb3r4el2od" path="res://ant_hill/ant_hill_game.gd" id="1_main"]

[node name="AntHillGame" type="Node2D" unique_id=694133042]
script = ExtResource("1_main")

[node name="Ground" type="ColorRect" parent="." unique_id=338524448]
offset_top = 598.0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.25, 0.22, 0.2, 1)

[node name="Anthill" type="Polygon2D" parent="." unique_id=1002283648]
position = Vector2(900, 598)
color = Color(0.45, 0.42, 0.4, 1)
polygon = PackedVector2Array(-60, 0, -58, -15.5, -52, -30, -42.4, -42.4, -30, -52, -15.5, -58, 0, -60, 15.5, -58, 30, -52, 42.4, -42.4, 52, -30, 58, -15.5, 60, 0)

[node name="Blueberry" type="Polygon2D" parent="." unique_id=745316385]
position = Vector2(200, 598)
color = Color(0.35, 0.32, 0.3, 1)
polygon = PackedVector2Array(-30, 0, 30, 0, 0, -50)

[node name="Ants" type="Node2D" parent="." unique_id=226484877]

[node name="DroppedBerries" type="Node2D" parent="." unique_id=1105563255]

[node name="UI" type="CanvasLayer" parent="." unique_id=819104760]

[node name="VBoxContainer" type="VBoxContainer" parent="UI" unique_id=179104296]
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 140.0
theme_override_constants/separation = 8

[node name="SugarLabel" type="Label" parent="UI/VBoxContainer" unique_id=511392409]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Sugar: 20"

[node name="SpawnHarvestBtn" type="Button" parent="UI/VBoxContainer" unique_id=1711187939]
layout_mode = 2
text = "Spawn Harvest Ant (10)"

[node name="SpawnCarryBtn" type="Button" parent="UI/VBoxContainer" unique_id=1300955357]
layout_mode = 2
text = "Spawn Carry Ant (10)"
